crates/noseyparker-cli/tests/scan/basic/snapshots/test_noseyparker__scan__basic__scan_default_datastore-5.snap
---
source: crates/noseyparker-cli/tests/scan/basic/mod.rs
expression: stderr
---
error: the default datastore at datastore.np exists; explicitly specify the datastore if you wish to update it

Usage: noseyparker [OPTIONS] <COMMAND>

For more information, try '--help'.

