crates/noseyparker-cli/tests/scan/basic/snapshots/test_noseyparker__scan__basic__scan_enumerator_string_provenance-2.snap
---
source: crates/noseyparker-cli/tests/scan/basic/mod.rs
expression: stdout
---
 Rule                           Findings   Matches   Accepted   Rejected   Mixed   Unlabeled 
─────────────────────────────────────────────────────────────────────────────────────────────
 GitHub Personal Access Token          1         1          0          0       0           1
