crates/noseyparker-cli/tests/scan/basic/snapshots/test_noseyparker__scan__basic__scan_enumerator_string_provenance-7.snap
---
source: crates/noseyparker-cli/tests/scan/basic/mod.rs
expression: json_output
---
[
  {
    "comment": null,
    "finding_id": "d551329ba5578559646aa49467be47e9d496578d",
    "groups": [
      "Z2hwX1hJeEI3S01OZEFyM3pxV3RRcWhFOTRxZ2xIcU96bjFEMXN0Zw=="
    ],
    "matches": [
      {
        "blob_id": "bef17e1f92978931020b423cfcfb6f1e7381d559",
        "blob_metadata": {
          "charset": null,
          "id": "bef17e1f92978931020b423cfcfb6f1e7381d559",
          "mime_essence": null,
          "num_bytes": 104
        },
        "comment": null,
        "groups": [
          "Z2hwX1hJeEI3S01OZEFyM3pxV3RRcWhFOTRxZ2xIcU96bjFEMXN0Zw=="
        ],
        "location": {
          "offset_span": {
            "end": 103,
            "start": 63
          },
          "source_span": {
            "end": {
              "column": 51,
              "line": 3
            },
            "start": {
              "column": 12,
              "line": 3
            }
          }
        },
        "provenance": [
          {
            "kind": "extended",
            "payload": "input.txt"
          }
        ],
        "rule_name": "GitHub Personal Access Token",
        "rule_structural_id": "f6c4fca24a1c7f275d51d2718a1585ca6e4ae664",
        "rule_text_id": "np.github.1",
        "score": null,
        "snippet": {
          "after": "\n",
          "before": "# This is fake configuration data\nUSERNAME=the_dude\nGITHUB_KEY=",
          "matching": "ghp_XIxB7KMNdAr3zqWtQqhE94qglHqOzn1D1stg"
        },
        "status": null,
        "structural_id": "155cdfa3e16d6abc09ecb8a2f659c2f84f7b91fc"
      }
    ],
    "mean_score": null,
    "num_matches": 1,
    "rule_name": "GitHub Personal Access Token",
    "rule_structural_id": "f6c4fca24a1c7f275d51d2718a1585ca6e4ae664",
    "rule_text_id": "np.github.1",
    "statuses": []
  }
]
